Imágenes finales del capítulo 2 (#27)

--- a/memoria/tex/capitulos/capitulo-2.tex
+++ b/memoria/tex/capitulos/capitulo-2.tex
@@ -202,4 +202,25 @@ Fijémonos además que si hacemos \textit{zoom} en ciertas partes de la imagen, 
     \label{fig:detalles}
 \end{figure}
 
-De manera natural, podemos aplicar esta misma teoría a cualquier otro tipo de funciones, como por ejemplo $z^n-1 (n\in\N\backslash\{0,1\})$, o incluso no polinómicas como $z^3-3^z$ o $z^2-2^z-1$.
+De manera natural, podemos aplicar esta misma teoría a cualquier otro tipo de funciones, como por ejemplo $z^n-1 (n\in\N\backslash\{0,1\})$, o incluso no polinómicas como $z^3-3^z$ o $z^2-2^z-1$ (véanse las imágenes \ref{fig:imagenes-finales}).
+
+\newpage
+
+\begin{figure}[h]
+    \centering
+    \begin{tabular}{cc}
+    \includegraphics[scale=0.5]{./img/cuencas-4.png} &   \includegraphics[scale=0.375]{./img/cuencas-5.png} \\
+    (a) Función $z^6-1$ & (b) Función $z^3-3^z$ \\[6pt]
+    \includegraphics[scale=0.45]{./img/cuencas-6.png} &   \includegraphics[scale=0.36]{./img/cuencas-7.png} \\
+    (a) Función $z^6-1$ & (b) Función $z^3-3^z$ \\
+    %\multicolumn{2}{c}{\includegraphics[scale=0.45]{./img/cuencas-6.png}} \\
+    %\multicolumn{2}{c}{(c) Función $z^2-2^z-1$} \\
+    %\multicolumn{2}{c}{\includegraphics[scale=0.40]{./img/cuencas-7.png}} \\
+    %\multicolumn{2}{c}{(d) Función $z^5 - z^3 + z^2 - 4$} \\ 
+    \end{tabular}
+    \caption{Representaciones de cuencas de atracción de distintas funciones.}
+    \label{fig:imagenes-finales}
+\end{figure}
+
+
+
