--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -3,8 +3,10 @@
 \usepackage[a4paper, tmargin=2.54cm, bmargin=2.54cm, lmargin=3.17cm, rmargin=3.17cm]{geometry}
 \newcommand{\head}[1]{\textnormal{\textbf{#1}}}
 
-\usepackage{titlesec}    % Remove the text 'Chapter' from each chapter.
-\titleformat{\chapter}{\normalfont\huge\bf}{\thechapter}{20pt}{\huge\bf}
+%Options: Sonny, Lenny, Glenn, Conny, Rejne, Bjarne, Bjornstrup
+\usepackage[Glenn]{fncychap}
+%\usepackage{titlesec}    % Remove the text 'Chapter' from each chapter.
+%\titleformat{\chapter}{\normalfont\huge\bf}{\thechapter}{20pt}{\huge\bf}
 
 \title{Master's thesis Health Informatics \the\year}
 \author{authors}
