Reajusto las imágenes finales (#27)

--- a/memoria/tex/capitulos/capitulo-2.tex
+++ b/memoria/tex/capitulos/capitulo-2.tex
@@ -191,7 +191,7 @@ DensityPlot[newtonVelocidad[x + I*y], {x, -2, 2}, {y, -2, 2},
 
 Fijémonos además que si hacemos \textit{zoom} en ciertas partes de la imagen, es decir, representamos una región más pequeña, encontramos estructuras que son iguales independientemente del zoom que se aplique. En la figura \ref{fig:detalles} podemos ver distintos detalles de la figura \ref{fig:cuencas-velocidad}, cada una es una ampliación de la anterior, y podemos ver como esa estructura se repite en todas las escalas.
 
-\newpage
+%\newpage
 
 \begin{figure}[h]
     \begin{tabular}{ccc}
@@ -211,9 +211,9 @@ De manera natural, podemos aplicar esta misma teoría a cualquier otro tipo de f
     \begin{tabular}{cc}
     \includegraphics[scale=0.5]{./img/cuencas-4.png} &   \includegraphics[scale=0.375]{./img/cuencas-5.png} \\
     (a) Función $z^6-1$ & (b) Función $z^3-3^z$ \\[6pt]
-    \multicolumn{2}{c}{\includegraphics[scale=0.45]{./img/cuencas-6.png}} \\
+    \multicolumn{2}{c}{\includegraphics[scale=0.4]{./img/cuencas-6.png}} \\
     \multicolumn{2}{c}{(c) Función $z^2-2^z-1$} \\
-    \multicolumn{2}{c}{\includegraphics[scale=0.40]{./img/cuencas-7.png}} \\
+    \multicolumn{2}{c}{\includegraphics[scale=0.4]{./img/cuencas-7.png}} \\
     \multicolumn{2}{c}{(d) Función $z^5 - z^3 + z^2 - 4$} \\ 
     \end{tabular}
     \caption{Representaciones de cuencas de atracción de distintas funciones.}
