Detalle en la compacidad del conjunto de Cantor (#33)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -57,7 +57,7 @@ Los puntos del intervalo inicial $[0,1]$ que restan tras las infinitas iteracion
  \label{fig:Cantor}
 \end{figure}
 
-El conjunto de Cantor es además un conjunto compacto, pues cada $C_n$ es una unión finita de intervalos cerrados y acotados, y por tanto compactos. Sabiendo que la intersección numerable de conjuntos compactos es compacta, tenemos pues que $\mathbf{C}$ es un conjunto compacto.
+El conjunto de Cantor es además un conjunto compacto, pues cada $C_n$ es una unión finita de intervalos cerrados y acotados de $\R$, y por tanto compactos. Sabiendo que la intersección arbitraria de conjuntos cerrados es cerrada, y que cada $C_n$ está acotado, tenemos pues que $\mathbf{C}$ es un conjunto compacto.
 
 Observemos ahora que en la primera iteración eliminamos $1$ segmento de longitud $\frac 1 3$, en la segunda iteración se eliminan $2$ segmentos de longitud $\left(\frac{1}{3}\right)^2$ y en la $n$-ésima iteración extraemos $2^{n-1}$ segmentos de longitud $\left(\frac{1}{3}\right)^n$. Si sumamos todas las longitudes de todos los segmentos que son eliminados en cada paso se obtiene:
 $$
